updated notebooks 2 and 3

--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "id": "RGeZvHsyHC72"
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -320,7 +320,7 @@
        "9 -0.121486  1.021509      0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4253,13 +4253,10 @@
    "name": "02_pytorch_classification.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "3fbe1355223f7b2ffc113ba3ade6a2b520cadace5d5ec3e828c83ce02eb221bf"
-  },
   "kernelspec": {
-   "display_name": ".venv_pytorch_gpu (py311)",
+   "display_name": ".venv_pytorch_gpu",
    "language": "python",
-   "name": ".venv_pytorch_gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
