--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -1955,11 +1955,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "from torchvision import transforms\n",
     "from torchvision.transforms import v2\n",
     "\n",
     "train_transforms = v2.Compose([\n",
@@ -2098,14 +2099,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create simple transform\n",
-    "simple_transform = transforms.Compose([ \n",
-    "    transforms.Resize((64, 64)),\n",
-    "    transforms.ToTensor(),\n",
+    "#simple_transform = transforms.Compose([ \n",
+    "#    transforms.Resize((64, 64)),\n",
+    "#    transforms.ToTensor(),\n",
+    "#])\n",
+    "\n",
+    "simple_transform = v2.Compose([\n",
+    "    v2.Resize((64, 64)),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
     "])"
    ]
   },
