changes in some py scripts of section 05

--- a/going_modular/05_pytorch_going_modular_script_mode.ipynb
+++ b/going_modular/05_pytorch_going_modular_script_mode.ipynb
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1904,19 +1904,15 @@
     "\"\"\"\n",
     "\n",
     "import os\n",
-    "\n",
     "import torch\n",
-    "\n",
     "import argparse\n",
-    "\n",
     "from torchvision import transforms\n",
-    "\n",
     "import data_setup, engine, model_builder, utils\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "def get_args_parser(add_help=True):\n",
     "  \n",
     "  # Argument parser for input arguments\n",
-    "  parser = argparse.ArgumentParser(description=\"Train a TinyVGG model on a custom dataset.\")\n",
+    "  parser = argparse.ArgumentParser(description=\"Train a TinyVGG model on a custom dataset.\", add_help=add_help)\n",
     "\n",
     "  # Define arguments\n",
     "  parser.add_argument(\"--num_epochs\", type=int, default=5, help=\"Number of epochs to train for.\")\n",
@@ -1928,19 +1924,14 @@
     "  parser.add_argument(\"--model_dir\", type=str, default=\"models\", help=\"Directory to save the trained model.\")\n",
     "  parser.add_argument(\"--model_name\", type=str, default=\"05_going_modular_script_mode_tinyvgg_model.pth\", help=\"Name for the saved model.\")\n",
     "\n",
-    "  # Parse arguments\n",
-    "  args = parser.parse_args()\n",
+    "  return parser\n",
     "\n",
-    "  # Setup hyperparameters\n",
-    "  #NUM_EPOCHS = 5\n",
-    "  #BATCH_SIZE = 32\n",
-    "  #HIDDEN_UNITS = 10\n",
-    "  #LEARNING_RATE = 0.001\n",
-    "\n",
-    "  # Setup directories\n",
-    "  #train_dir = \"../data/pizza_steak_sushi/train\"\n",
-    "  #test_dir = \"../data/pizza_steak_sushi/test\"\n",
-    "\n",
+    "def main(args):\n",
+    "  \n",
+    "  # Set up device\n",
+    "  torch.manual_seed(42)\n",
+    "  torch.cuda.manual_seed(42)\n",
+    "  \n",
     "  # Setup target device\n",
     "  device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -1987,7 +1978,11 @@
     "  # Save the model with help from utils.py\n",
     "  utils.save_model(model=model,\n",
     "                  target_dir=args.model_dir,\n",
-    "                  model_name=args.model_name) #\"05_going_modular_script_mode_tinyvgg_model.pth\")"
+    "                  model_name=args.model_name) #\"05_going_modular_script_mode_tinyvgg_model.pth\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "  args = get_args_parser().parse_args()\n",
+    "  main(args)  "
    ]
   },
   {
@@ -2058,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2077,34 +2072,32 @@
     "\"\"\"\n",
     "\n",
     "import os\n",
-    "\n",
     "import torch\n",
-    "\n",
     "import argparse\n",
-    "\n",
     "import torchvision\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from torchvision.transforms import v2\n",
-    "\n",
     "import model_builder, utils\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    \n",
+    "def get_args_parser(add_help=True):\n",
+    "\n",
     "    # Argument parser for input arguments\n",
-    "    parser = argparse.ArgumentParser(description=\"Predicts the class of an input image using a trained TinyVGG model. Posible class names are: pizza, steak, sushi.\")\n",
-    "    \n",
+    "    parser = argparse.ArgumentParser(description=\"Predicts the class of an input image using a trained TinyVGG model. Posible class names are: pizza, steak, sushi.\", add_help=add_help)\n",
+    "\n",
     "    parser.add_argument('--image_path', type=str, required=True, help=\"Path to the input image.\")\n",
     "    parser.add_argument('--image_name', type=str, required=True, help=\"Image name.\")\n",
     "    parser.add_argument('--model_path', type=str, required=True, help=\"Path to the trained model.\")\n",
     "    parser.add_argument('--model_name', type=str, required=True, help=\"Model name.\")\n",
     "    parser.add_argument('--hidden_units', type=int, default=None, help=\"Number of hidden units per stage.\")\n",
-    "    \n",
-    "    # Parse arguments\n",
-    "    args = parser.parse_args()\n",
     "\n",
-    "    # Setup class names\n",
+    "    return parser\n",
+    "\n",
+    "def main(args):\n",
+    "    \"\"\"\n",
+    "    Predicts the class of an input image using a trained TinyVGG model.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Create class_names (one output unit unit)\n",
     "    class_names = [\"pizza\", \"steak\", \"sushi\"]\n",
     "\n",
     "    # Setup target device\n",
@@ -2150,7 +2143,12 @@
     "    # Obtain the class name\n",
     "    pred_image_label_class = class_names[target_image_pred_label]\n",
     "    \n",
-    "    print(f\"[INFO] Pred class: {pred_image_label_class}, Pred prob: {target_image_pred_probs.max():.3f}\")"
+    "    print(f\"[INFO] Pred class: {pred_image_label_class}, Pred prob: {target_image_pred_probs.max():.3f}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':    \n",
+    "    args = get_args_parser().parse_args()\n",
+    "    main(args)  "
    ]
   },
   {
