Creato con Colab

--- a/extras/exercises/03_pytorch_computer_vision_exercises.ipynb
+++ b/extras/exercises/03_pytorch_computer_vision_exercises.ipynb
@@ -60,34 +60,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GaeYzOTLwWh2",
-        "outputId": "17dd5453-9639-4b01-aa18-7ddbfd5c3253"
+        "outputId": "6403e9ed-03da-46f7-ed2a-85473be435f8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sat Apr 16 03:23:02 2022       \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
-            "|-------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                               |                      |               MIG M. |\n",
-            "|===============================+======================+======================|\n",
-            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   39C    P0    29W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
-            "|                               |                      |                  N/A |\n",
-            "+-------------------------------+----------------------+----------------------+\n",
-            "                                                                               \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                                  |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-            "|        ID   ID                                                   Usage      |\n",
-            "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
+            "Fri Jul 25 08:46:29 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   50C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
       ]
@@ -101,23 +101,25 @@
         "# Exercises require PyTorch > 1.10.0\n",
         "print(torch.__version__)\n",
         "\n",
-        "# TODO: Setup device agnostic code\n"
+        "# TODO: Setup device agnostic code\n",
+        "device = \"cuda\" if torch.cuda.is_available else \"cpu\"\n",
+        "device"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 54
         },
         "id": "DNwZLMbCzJLk",
-        "outputId": "9c150c50-a092-4f34-9d33-b45247fb080d"
+        "outputId": "3ad2ede9-e5ca-4f61-d40e-606d8fa914aa"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.10.0+cu111\n"
+            "2.6.0+cu124\n"
           ]
         },
         {
@@ -131,7 +133,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 8
         }
       ]
     },
