Docs: Update broken link in workflow documentation

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -613,7 +613,7 @@
    "source": [
     "Hmm?\n",
     "\n",
-    "You probably noticed we used [`torch.inference_mode()`](https://pytorch.org/docs/stable/generated/torch.inference_mode.html) as a [context manager](https://realpython.com/python-with-statement/) (that's what the `with torch.inference_mode():` is) to make the predictions.\n",
+    "You probably noticed we used [`torch.inference_mode()`](https://docs.pytorch.org/docs/stable/generated/torch.autograd.grad_mode.inference_mode.html) as a [context manager](https://realpython.com/python-with-statement/) (that's what the `with torch.inference_mode():` is) to make the predictions.\n",
     "\n",
     "As the name suggests, `torch.inference_mode()` is used when using a model for inference (making predictions).\n",
     "\n",
